[project]
name = "tool_using_business_workflow_agent"
version = "0.1.0"
description = "A production-quality, extensible tool-using workflow agent."
authors = ["Your Name <your.email@example.com>"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
